--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
     </form>
     <h2 id="txtAusgabe"></h2>
 
+    <h1>lev2_2 conditional statements - air quality</h1>
+    <div class="slidecontainer">
+        <div class="content">
+            <h4 class="range">AQI (Air Quality Index): <span class="airValue">0</span></h4>
+            <input type="range" min="0" max="150" value="0" name="airquality" id="myRange" onchange="checkAirQuality()">
+            <h4 id="concern">Please set slider for health concern </h4>
+            <h4 id="effect">Please set slider for health effect </h4>
+        </div>
+    </div>
+
+
+
+
+
+
+
 
 
 
