--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="number" name="" id="age">
         <input type="submit" value="Check Age" onclick="adult()">
     </form>
-    <div id="out"></div>
+    <h2 id="out"></h2>
 
     <h1>lev1_2</h1>
 
